# Cyber-Projects

./: .gitignore  README.md  bla.java  ble.java  hello.java  tempCodeRunnerFile.java
Java Enterprise App Security Assessment/: .coveragerc  .env.example  .gitignore  Makefile  PHASE1_SETUP.md  README.md  orchestrator.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
Java Enterprise App Security Assessment/assessment/dast/: access_control.py  auth_tester.py  sqli_tester.py  ssrf_tester.py
Java Enterprise App Security Assessment/assessment/sast/: run_sast.py
Java Enterprise App Security Assessment/assessment/sca/: cve_enricher.py  dependency_check.py  sbom_generator.py
Java Enterprise App Security Assessment/config/: config.yaml.example  semgrep_rules.yaml
Java Enterprise App Security Assessment/docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  FINDINGS_GUIDE.md  QUICKSTART.md  README.md  SEMGREP_RULES.md  USAGE.md
Java Enterprise App Security Assessment/findings/: all_findings.json  enriched_cves.json  sample_findings.json  sast_results.json
Java Enterprise App Security Assessment/java_security_assessment/: __init__.py  assessment_orchestrator.py  cli.py  config_manager.py  finding_manager.py
Java Enterprise App Security Assessment/java_security_assessment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Java Enterprise App Security Assessment/report/: report_generator.py
Java Enterprise App Security Assessment/target-app/: Dockerfile  pom.xml
Java Enterprise App Security Assessment/tests/: conftest.py
(+921 files in other folders)
